--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "vue": "^2.5.2",
     "vue-datepicker": "^1.3.0",
     "vue-resource": "^0.9.3",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuejs-datepicker": "^0.9.24"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
