--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "vue-datepicker": "^1.3.0",
     "vue-resource": "^0.9.3",
     "vue-router": "^3.0.1",
-    "vuejs-datepicker": "^0.9.24"
+    "vuejs-datepicker": "^0.9.24",
+    "node-sass": "^4.7.2",
+    "sass-loader": "^6.0.6"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
